# python-project-52

./: .coveragerc  .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml  pytest.ini  render.yaml  setup.cfg
.github/workflows/: CI.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: admin.py  settings.py  tests.py  urls.py  utils.py  views.py
task_manager/fixtures/: labels_fixture.json  statuses_fixture.json  tasks_fixture.json  users_fixture.json
task_manager/labels/: models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_remove_label_tasks_delete_tasklabelrelationship.py  0003_alter_label_name.py
task_manager/statuses/: models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_name.py
task_manager/tasks/: filters.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_description_alter_task_executor.py  0003_alter_task_description_alter_task_executor.py  0004_tasklabelrelationship_task_labels.py  0005_alter_task_labels.py  0006_alter_task_labels.py  0007_alter_task_author_alter_task_description_and_more.py  0008_alter_task_author_alter_task_executor.py
task_manager/templates/: layout.html  login.html
task_manager/templates/common/: create.html  delete.html  index.html  update.html
task_manager/templates/elements/: footer.html  navbar.html
task_manager/templatetags/: custom_filters.py
task_manager/users/: forms.py  models.py  tests.py  urls.py  utils.py  views.py
(+28 files in other folders)
