[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Ivlev Nikita <thel4stofme@yandex.ru>"]
readme = "README.md"
packages = [
  { include = "task_manager" }
]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.9"
whitenoise = {extras = ["brotli"], version = "^6.6.0"}
gunicorn = "^22.0.0"
uvicorn = "^0.29.0"
python-dotenv = "^1.0.1"
django-bootstrap5 = "^24.2"
django-filter = "^24.2"
rollbar = "^1.0.0"
pytest-django = "^4.8.0"
pytest-cov = "^5.0.0"
flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
